--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <app-search></app-search>
   <app-search-results></app-search-results>
+  <app-deck-container></app-deck-container>
 </div>
