--- a/src/app/deck-card/deck-card.component.html
+++ b/src/app/deck-card/deck-card.component.html
@@ -1,1 +1,1 @@
-<div (dblclick)="addCardToDeck($event)">{{card.name}}</div>
+<div>{{card.name}} <span (click)="removeCardFromDeck(card)">X</span> </div>
