--- a/src/app/deck-container/deck-container.component.html
+++ b/src/app/deck-container/deck-container.component.html
@@ -1,5 +1,5 @@
 <ol>
   <li *ngFor="let card of (deck$ | async)">
-    <app-deck-card [card]="card" (addCardClicked)="addCard($event)"></app-deck-card>
+    <app-deck-card [card]="card" (removeCardClicked)="removeCard($event)"></app-deck-card>
   </li>
 </ol>
