Made search input pretty

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<div>
-  <app-search></app-search>
-  <app-search-results></app-search-results>
-  <app-deck-container></app-deck-container>
+<div class="content__container">
+  <header class="content__header">
+    <h1>Simple Magic the Gathering Deck Builder</h1>
+  </header>
+  <section class="content__main">
+    <app-search class="search__search-container"></app-search>
+    <app-search-results class="search__search-results"></app-search-results>
+    <app-deck-container></app-deck-container>
+  </section>
+  <footer class="content__footer">
+    <h6>Done as an exercise for Angular</h6>
+  </footer>
 </div>
