--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Quattrocento');
+@import 'variables';
+
+body {
+  background-color: $theme_bg_color;
+
+  font-size: 16px;
+  font-family: 'Quattrocento', serif;
+}
+
+form {
+  border: 0;
+}
+
+form fieldset {
+  border: 0;
+}
+
+ul, ol {
+  list-style: none;
+
+  padding: 0;
+  margin: 0;
+}
+
 input[disabled] {
-  background-color: dimgray;
+//  background-color: dimgray;
 }
