Made deck display pretty

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <section class="content__main">
     <app-search class="search__search-container"></app-search>
     <app-search-results class="search__search-results"></app-search-results>
-    <app-deck-container></app-deck-container>
+    <app-deck-container class="deck__container"></app-deck-container>
   </section>
   <footer class="content__footer">
     <h6>Done as an exercise for Angular</h6>
