--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" novalidate (ngSubmit)="noOp(form)" class="search__form">
+<form #form="ngForm" novalidate (ngSubmit)="return;" class="search__form">
   <h2>Search cards</h2>
 
   <fieldset>
