Added card images

--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,5 +1,7 @@
-<ol>
-  <li *ngFor="let card of (searchResult$ | async)" (dblclick)="addCardToDeck(card)">
-    {{card.name}}
+<ol class="search-results__container">
+  <li *ngFor="let card of (searchResult$ | async)"
+      (dblclick)="addCardToDeck(card)"
+      class="search-results__card">
+    <img [src]="card.imageUrl" [alt]="card.name" class="search-results__card-image"/>
   </li>
 </ol>
