--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,19 +23,16 @@
 
 .search__search-container {
   border-right: 1px solid $theme_dark_color;
+
+  flex: 0 0 15rem;
 }
 
 .search__search-results {
-  flex-grow: 1;
+  flex: 0 1 100%;
 
-  display: grid;
-  grid-gap: 15px;
-  grid-auto-rows: 300px;
-  grid-auto-columns: 200px;
-  grid-auto-flow: row;
 }
 
 .deck__container {
   border-left: 1px solid $theme_dark_color;
-  width: 15rem;
+  flex: 0 0 15rem;
 }
