--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,3 +3,6 @@ $theme_dark_color: #332D3B;
 $theme_medium_color: #625772;
 $theme_accent_color: #A9EEE6;
 $theme_highlight_color: #F9A1BC;
+
+$card-width: 220px;
+$card-height: 330px;
